--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,3 +3,8 @@
     height: auto;
     text-align: center;
 }
+
+.imgNonagon {
+    width: 90px;
+    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+}
